--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MEmorial</title>
    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="jquery.cycle2.min.js"></script>-->
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
