adding slider and style changes.

--- a/page10.html
+++ b/page10.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>MEmorial</title>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <figure>
