--- a/page6.html
+++ b/page6.html
@@ -7,6 +7,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         
         <script src="jquery.cycle2.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="cycle-slideshow"
@@ -30,4 +32,3 @@
         <p><a href="page7.html">Next</a></p>         
     </body>
 </html>
-
