--- a/page2.html
+++ b/page2.html
@@ -34,9 +34,9 @@
 	    Racist language is casually used to cheer on a sports team.
 	</div>
 	<div id="htmlcaption2" class="nivo-html-caption">
-		While the suicide rate among American Indian/Alaska Native adolescents and young adults ages 15 to 34 is 2.5 times higher than the national average for that age group.
+		While the <span id="emphasis">suicide</span> rate among American Indian/Alaska Native adolescents and young adults ages 15 to 34 is <span id="emphasis">2.5 times higher than the national average</span> for that age group.
 	</div>
 
-        <p><a href="page3.html">Next</a></p>         
+    	<a href="page3.html">Next</a>        
     </body>
 </html>
