--- a/page3.html
+++ b/page3.html
@@ -32,12 +32,12 @@
 	   Cleveland Indians fans don redface.
 	</div>
 	<div id="htmlcaption2" class="nivo-html-caption">
-		Native man confronts a sports fan dressed in <span id="emphasis">caricature</span>.
+		The difference between real Native lives and the image of the mascot is stark as a Native man confronts a sports fan dressed in <span id="emphasis">caricature</span>.
 	</div>
 
             
             
 
-        <p><a href="page5.html">Next</a></p>         
+        <a href="page4.html">Next</a>         
     </body>
 </html>
