--- a/page5.html
+++ b/page5.html
@@ -33,10 +33,10 @@
 	    Italian-American actor Espera Oscar de Corti made a career of depicting Native Americans in movies and television as Iron Eyes Cody. In this ad, he plays a noble savage, saddened by pollution.
 	</div>
 	<div id="htmlcaption2" class="nivo-html-caption">
-		This ad was popular around the same time members of the American Indian Movement occupied Wounded Knee on the Pine Ridge Indian Reservation in South Dakota.
+		This ad was popular around the same time members of the <span id="emphasis">American Indian Movement occupied Wounded Knee</span> on the Pine Ridge Indian Reservation in South Dakota.
 	</div>
 
-        <p><a href="page6.html">Next</a></p>         
+        <a href="page6.html">Next</a>        
     </body>
 </html>
 
