--- a/page2.html
+++ b/page2.html
@@ -11,13 +11,17 @@
 	    <link rel="stylesheet" href="nivo-slider.css" type="text/css" />
 	    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-	    <link rel="stylesheet" href="nivo-slider/themes/default/default.css" type="text/css" />   
+	    <link rel="stylesheet" href="/themes/default/default.css" type="text/css" />   
 		<script type="text/javascript">
 		    $(window).load(function() {
 		        $('#slider').nivoSlider({effect: 'fade', 
 		        						pauseOnHover: false,
 		        						directionNav: false,
-		        						controlNav: false });
+		        						controlNav: false,
+		        						slideshowEnd: function(){
+		        									window.open("page3.html", "_self");
+		        									}, 
+		        						});
 		    });
 		</script>
     </head>
@@ -35,8 +39,6 @@
 	</div>
 	<div id="htmlcaption2" class="nivo-html-caption">
 		While the <span id="emphasis">suicide</span> rate among American Indian/Alaska Native adolescents and young adults ages 15 to 34 is <span id="emphasis">2.5 times higher than the national average</span> for that age group.
-	</div>
-
-    	<a href="page3.html">Next</a>        
+	</div>      
     </body>
 </html>
