--- a/page4.html
+++ b/page4.html
@@ -10,13 +10,17 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	    <link rel="stylesheet" href="nivo-slider.css" type="text/css" />
 	    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-	    <link rel="stylesheet" href="nivo-slider/themes/default/default.css" type="text/css" />   
+	    <link rel="stylesheet" href="/themes/default/default.css" type="text/css" />   
 		<script type="text/javascript">
 		    $(window).load(function() {
 		        $('#slider').nivoSlider({effect: 'fade', 
 		        						pauseOnHover: false,
 		        						directionNav: false,
-		        						controlNav: false });
+		        						controlNav: false,
+		        						slideshowEnd: function(){
+		        									window.open("page5.html", "_self");
+		        									}, 
+		        						});
 		    });
 		</script>
     </head>
@@ -35,8 +39,7 @@
 	<div id="htmlcaption2" class="nivo-html-caption">
 		While this <span id="emphasis">contemporary Navajo</span> woman <span id="emphasis">fights</span> to allow her son to wear a <span id="emphasis">traditional</span> long hairstyle, against his <span id="emphasis">school's objections</span>.
 	</div>
-
-        <a href="page5.html">Next</a>        
+    
     </body>
 </html>
 
