--- a/page9.html
+++ b/page9.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>MEmorial</title>
+        <title>#notyourmascot</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         
 	    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
@@ -17,8 +17,9 @@
 		        						pauseOnHover: false,
 		        						directionNav: false,
 		        						controlNav: false,
+										pauseTime: 6000,   
 		        						slideshowEnd: function(){
-		        									window.open("page10.html", "_self");
+		        									window.open("page11.html", "_self");
 		        									}, 
 		        						});
 		    });
@@ -42,6 +43,5 @@
      
     </body>
 </html>
-
 
 
