--- a/page4.html
+++ b/page4.html
@@ -3,20 +3,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>MEmorial</title>
+        <title>#notyourmascot</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         
 	    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	    <link rel="stylesheet" href="nivo-slider.css" type="text/css" />
 	    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-	    <link rel="stylesheet" href="/themes/default/default.css" type="text/css" />   
+  
 		<script type="text/javascript">
 		    $(window).load(function() {
 		        $('#slider').nivoSlider({effect: 'fade', 
 		        						pauseOnHover: false,
 		        						directionNav: false,
 		        						controlNav: false,
+										pauseTime: 6000,   
 		        						slideshowEnd: function(){
 		        									window.open("page5.html", "_self");
 		        									}, 
@@ -45,5 +46,4 @@
 
 
             
-
 
