--- a/page7.html
+++ b/page7.html
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>MEmorial</title>
+        <title>#notyourmascot</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         
 	    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
@@ -18,6 +18,7 @@
 		        						pauseOnHover: false,
 		        						directionNav: false,
 		        						controlNav: false,
+										pauseTime: 6000,   
 		        						slideshowEnd: function(){
 		        									window.open("page8.html", "_self");
 		        									}, 
@@ -43,5 +44,4 @@
         
     </body>
 </html>
-
 
